<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/rules_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/rules_label"
		android:textSize="60sp"
		app:layout_constraintBottom_toTopOf="@+id/rule1"
		app:layout_constraintHorizontal_bias="0.12"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.056" />

	<TextView
		android:id="@+id/rule1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="163dp"
		android:layout_marginBottom="223dp"
		android:text="@string/rule1"
		android:textSize="15sp"
		app:layout_constraintBottom_toTopOf="@+id/name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"></TextView>

	<TextView
		android:id="@+id/rule2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="28dp"
		android:text="@string/rule2"
		android:textSize="15sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rule1"></TextView>

	<TextView
		android:id="@+id/rule3"
		android:layout_width="380dp"
		android:layout_height="46dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="36dp"
		android:text="@string/rule3"
		android:textSize="15sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rule2"></TextView>

	<EditText
		android:id="@+id/name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginBottom="99dp"
		android:ems="10"
		android:hint="@string/name"
		android:inputType="textPersonName"
		app:layout_constraintBottom_toTopOf="@+id/button"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/rule1"></EditText>

	<Button
		android:id="@+id/button"
		android:layout_width="230dp"
		android:layout_height="0dp"
		android:layout_marginStart="77dp"
		android:layout_marginBottom="78dp"
		android:text="@string/start_game"
		android:onClick="startGame"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>